--- a/style.css
+++ b/style.css
@@ -33,6 +33,16 @@ h2 {
   margin-bottom: 20px;
 }
 
+.depth-input {
+  width: 60px;
+  background-color: #252526;
+  color: #d4d4d4;
+  border: 1px solid #333;
+  border-radius: 4px;
+  padding: 8px 5px;
+  font-family: inherit;
+}
+
 /* Button Styles */
 button {
   background-color: #569cd6;
